# news-aggregator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.yaml
src/: main.py
src/filters/: __init__.py  keyword.py
src/news_aggregator/: __init__.py  __main__.py  config.py
src/news_aggregator/output/: __init__.py  telegram.py
src/news_aggregator/scrapers/: __init__.py  base.py  playwright.py  rss.py  twitter.py  web.py
src/news_aggregator/storage/: __init__.py  db.py
src/output/: telegram.py
src/scrapers/: __init__.py  base.py  rss.py  twitter.py  web.py
src/storage/: db.py
