[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-aggregator"
version = "0.1.0"
description = "News aggregator with custom output"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Dan Pasecinic" }
]
dependencies = [
    "deep-translator>=1.11.4",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "playwright>=1.49.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "apscheduler>=4.0.0a5",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
]

[project.scripts]
news-aggregator = "news_aggregator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/news_aggregator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
